# alphaV4

./: CMakeLists.txt  main.c
headers/commandIdentifier/: commandIdentifier.c  commandIdentifier.h
headers/fileReader/: fileReader.c  fileReader.h
headers/interpreter/: interpreter.c  interpreter.h
headers/lexer/: lexer.c  lexer.h
headers/libloader/: libloader.c  libloader.h
headers/luahelpers/: luahelpers.c  luahelpers.h
